get peoples working

--- a/src/app/peoples/peoples.component.html
+++ b/src/app/peoples/peoples.component.html
@@ -1,3 +1,9 @@
-<p>
-  peoples works!
-</p>
+<h2>Peoples</h2>
+
+<ul class="heroes">
+  <li *ngFor="let people of peoples">
+    <a routerLink="/detail/{{people.id}}">
+      <span>{{people.name}}</span>
+    </a>
+  </li>
+</ul>
