--- a/src/app/peoples/peoples.component.html
+++ b/src/app/peoples/peoples.component.html
@@ -1,9 +1,10 @@
 <h2>Peoples</h2>
 
 <ul class="heroes">
-  <li *ngFor="let people of peoples">
-    <a routerLink="/detail/{{people.id}}">
+  <li *ngFor="let people of peoples" (click)="getPeopleDetails(people['url'])">
+
       <span>{{people.name}}</span>
-    </a>
+         <span>{{people.p_homeworld}}</span>
+
   </li>
 </ul>
