--- a/src/app/peoples/peoples.component.css
+++ b/src/app/peoples/peoples.component.css
@@ -1,8 +1,36 @@
-.example-card {
-  max-width: 400px;
+.work {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
 }
 
-.example-header-image {
-  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-  background-size: cover;
+.card {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+}
+
+.card .card-content {
+  flex: 1;
+  padding: 0.25em 0.3em 0;
+}
+
+.card .card-content p {
+  font-size: 1em;
+  line-height: 1.2;
+  margin-bottom: 0.5em;
+}
+
+
+@media only screen and (min-width: 37.50em) {
+  .card {
+    max-width: calc(50% - 20px);
+  }
+}
+
+@media only screen and (min-width: 75em) {
+  .card {
+    width: calc(33.33333% - 20px);
+  }
 }
