--- a/src/app/peoples/peoples.component.html
+++ b/src/app/peoples/peoples.component.html
@@ -1,26 +1,27 @@
 <h2>Peoples</h2>
 
-<ul class="heroes">
-  <li *ngFor="let people of peoples" (click)="getPeopleDetails(people['url'])">
-
-      <span>{{people.name}}</span>
-         <span>{{people.p_homeworld}}</span>
-
-  </li>
-</ul>
 <mat-form-field class="search-form">
   <input matInput placeholder="Search Picture" type="text">
 </mat-form-field>
 <button button="submit" mat-raised-button color="primary">Search</button>
 <br>
 
-<div fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center">
-  <mat-card class="card-picture" *ngFor="let people of peoples">
-    <mat-card-title fxLayout.gt-xs="row" fxLayout.xs="column">
-      <span fxFlex="80%">{{people.name}}</span>
-      <mat-icon fxFlex="10%">mode_edit</mat-icon>
-      <mat-icon fxFlex="10%">delete</mat-icon>
-    </mat-card-title>
-    <img mat-card-image [src]="picture.img">
+<div fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center" >
+  <mat-card class="card-picture" *ngFor="let people of peoples" >
+     <mat-card-title (click)="getPeopleDetails(people['url'])">{{people.name}}</mat-card-title>
+    <mat-card-subtitle>Character</mat-card-subtitle>
+
+    <img mat-card-image src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR53ELJqdykZFmQMJMK7JvFPKRFuz7lbWdrwDvo18DXXoL2I4UP" (click)="getPeopleDetails(people['url'])">
+     <mat-card-actions>
+
+
+    <button (click)="getPeopleDetails(people['url'])" mat-button>View</button>
+    <button mat-button>SHARE</button>
+
+  </mat-card-actions>
   </mat-card>
 </div>
+
+
+
+
