--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container>
-  <mat-sidenav  #sidenav role="navigation">
+  <!--<mat-sidenav  #sidenav role="navigation">
    <mat-nav-list>
     <a mat-list-item>
       <mat-icon class="icon">input</mat-icon>
@@ -18,7 +18,7 @@
       <span class="label">LogOut</span>
     </a>
     </mat-nav-list>
-  </mat-sidenav>
+  </mat-sidenav> -->
   <mat-sidenav-content>
     <mat-toolbar color="primary">
      <div fxHide.gt-xs>
@@ -31,7 +31,7 @@
           {{title}}
        </a>
      </div>
-     <div fxFlex fxLayout fxLayoutAlign="flex-end"  fxHide.xs>
+   <!--  <div fxFlex fxLayout fxLayoutAlign="flex-end"  fxHide.xs>
         <ul fxLayout fxLayoutGap="20px" class="navigation-items">
             <li>
                 <a>
@@ -58,11 +58,11 @@
                  </a>
             </li>
         </ul>
-     </div>
+     </div> -->
     </mat-toolbar>
     <main>
         <router-outlet></router-outlet>
-        <app-messages></app-messages>
+      <app-messages></app-messages>
     </main>
   </mat-sidenav-content>
 </mat-sidenav-container>
