--- a/src/app/films/films.component.html
+++ b/src/app/films/films.component.html
@@ -1,3 +1,27 @@
-<p>
-  films works!
-</p>
+<h2>Films</h2>
+
+<mat-form-field class="search-form">
+  <input matInput placeholder="Search Picture" type="text">
+</mat-form-field>
+<button button="submit" mat-raised-button color="primary">Search</button>
+<br>
+<mat-spinner [style.display]="loading ? 'block' : 'none'"></mat-spinner>
+
+<button (click)="goPrevious()"  color="primary" mat-raised-button>PREVIOUS</button>&nbsp;
+  <button (click)="goNext()"  color="primary" mat-raised-button>NEXT</button>
+<div fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center" >
+  <mat-card class="card-picture" *ngFor="let film of films" >
+     <mat-card-title (click)="getFilmDetails(film['url'])">{{film.title}}</mat-card-title>
+    <mat-card-subtitle>Film</mat-card-subtitle>
+
+    <img mat-card-image src="{{film.img_url}}" (click)="getFilmDetails(film['url'])">
+     <mat-card-actions>
+
+
+    <button (click)="getFilmDetails(film['url'])" mat-button>View</button>
+    <button mat-button>SHARE</button>
+
+  </mat-card-actions>
+  </mat-card>
+
+  </div>
