--- a/src/app/planet-details/planet-details.component.html
+++ b/src/app/planet-details/planet-details.component.html
@@ -1,3 +1,97 @@
-<p>
-  planet-details works!
-</p>
+
+<div class="container">
+  <section fxLayout="row wrap" fxLayoutAlign="center center" *ngIf="planet">
+      <mat-card fxFlex="1000px" fxFlex.xs="100%">
+          <mat-card-title>{{ planet.name }}</mat-card-title>
+          <mat-card-content>
+            <div fxLayout="column wrap" fxLayoutGap="40px">
+                <div fxLayout="row wrap" fxFlex>
+
+
+
+              <table >
+                <tr>
+                  <td align="left"><strong>Population,</strong></td>  <td align="left">{{planet.population}}</td>
+                </tr>
+                <tr>
+                 <td align="left"><strong>Rotation Period,</strong></td>  <td align="left">{{planet.rotation_period}}</td>
+                </tr>
+                <tr>
+                   <td align="left"><strong>Orbital Period,</strong></td>  <td align="left">{{planet.orbital_period}}</td>
+                </tr>
+                <tr>
+                  <td align="left"><strong>Diameter,</strong></td>  <td align="left">{{planet.diameter}}</td>
+               </tr>
+               <tr>
+                <td align="left"><strong>Gravity,</strong></td>  <td align="left">{{planet.gravity}}</td>
+             </tr>
+             <tr>
+              <td align="left"><strong>Terrain,</strong></td>  <td align="left">{{planet.terrain}}</td>
+           </tr>
+           <tr>
+            <td align="left"><strong>Surface Water,</strong></td>  <td align="left">{{planet.surface_water}}</td>
+         </tr>
+         <tr>
+          <td align="left"><strong>Climate,</strong></td>  <td align="left">{{planet.climate}}</td>
+       </tr>
+                  </table>
+                </div>
+
+            </div>
+            <div fxLayout="column wrap" fxFlexOffset="60px">
+                <mat-card class="card my-card">
+
+                   <img mat-card-image src="{{planet.img_url}}">
+
+                 </mat-card>
+            </div>
+          </mat-card-content>
+        </mat-card>
+  </section>
+  </div>
+
+  <div class="container">
+      <section fxLayout="row wrap" fxLayoutAlign="center center" *ngIf="planet">
+          <mat-card fxFlex="500px" fxFlex.xs="100%">
+              <mat-card-title>Related Characters</mat-card-title>
+              <mat-card-content>
+                <div fxLayout="column wrap" fxLayoutGap="20px" fxFlexOffset="30px" *ngFor="let character of planet.p_residents">
+                    <mat-card class="card my-card">
+                        <mat-card-subtitle><a  href="https://www.google.com.sg">{{character.name}}</a></mat-card-subtitle>
+
+                         <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + planet.img_url + ')', 'background-size': 'cover'  }"></div> -->
+                         <img mat-card-image src="{{character.img_url}}">
+
+                      </mat-card>
+                      <!-- <mat-card class="card my-card">
+                          <mat-card-title><a href="https://www.google.com.sg">{{planet.title}}</a></mat-card-title>
+                          <img mat-card-image src="{{planet.img_url}}">
+
+                        </mat-card> -->
+                </div>
+              </mat-card-content>
+            </mat-card>
+      </section>
+
+  </div>
+
+  <div class="container">
+      <section fxLayout="row wrap" fxLayoutAlign="center center" *ngIf="planet">
+          <mat-card fxFlex="500px" fxFlex.xs="100%">
+              <mat-card-title>Related Films</mat-card-title>
+              <mat-card-content>
+                <div fxLayout="column wrap" fxLayoutGap="20px" fxFlexOffset="30px" *ngFor="let film of planet.p_films">
+                    <mat-card class="card my-card">
+                        <mat-card-subtitle><a  href="https://www.google.com.sg">{{film.name}}</a></mat-card-subtitle>
+
+                         <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + planet.img_url + ')', 'background-size': 'cover'  }"></div> -->
+                         <img mat-card-image src="{{film.img_url}}">
+
+                      </mat-card>
+                </div>
+              </mat-card-content>
+            </mat-card>
+      </section>
+    </div>
+
+
