--- a/src/app/films/films.component.css
+++ b/src/app/films/films.component.css
@@ -3,12 +3,15 @@
   flex-direction: row;
   justify-content: flex-start;
   flex-wrap: wrap;
+  padding: 20px;
+  flex-grow: 1; 
 }
 
 .card {
 display: flex;
 flex-direction: column;
 margin: 10px;
+max-width: 20% !important;
 }
 
 .card .card-content {
