--- a/src/app/film-details/film-details.component.css
+++ b/src/app/film-details/film-details.component.css
@@ -22,3 +22,19 @@ font-size: 7px;
   color: #f44336;
 }
 
+.MovieInfo
+{
+  width: 15%;
+}
+.sec-info
+{
+  margin-bottom: 20px;
+}
+.header-img{
+  width: 100px;
+  margin: 4px
+}
+.sm-card
+{
+  margin-bottom: 10px;
+}
