--- a/src/app/films/films.component.html
+++ b/src/app/films/films.component.html
@@ -8,10 +8,13 @@
 <div fxLayout="row" fxLayoutAlign="center">
 <mat-spinner [style.display]="loading ? 'block' : 'none'"></mat-spinner>
 </div>
-<button (click)="goPrevious()"  color="primary" mat-raised-button>PREVIOUS</button>&nbsp;
-  <button (click)="goNext()"  color="primary" mat-raised-button>NEXT</button>
-<div class="work" fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center" >
-  <mat-card class="card-picture card" *ngFor="let film of films" >
+<!-- <div class="btnNexPrev" fxLayout="row" fxLayoutAlign="center">
+  <button (click)="goPrevious()"  color="primary" mat-raised-button>PREVIOUS</button>&nbsp;
+  <button (click)="goNext()"  color="primary" mat-raised-button>NEXT</button> 
+</div> -->
+
+<div class="work" fxLayout="row"  fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center" >
+  <mat-card class="card-picture card" fxFlex="20%" *ngFor="let film of films" >
      <mat-card-title (click)="getFilmDetails(film['url'])">{{film.title}}</mat-card-title>
     <mat-card-subtitle>Film</mat-card-subtitle>
 
