fixed mobile in Film
Signed-off-by: han <myinttun.han@isobar.com>

--- a/src/app/films/films.component.html
+++ b/src/app/films/films.component.html
@@ -13,8 +13,8 @@
   <button (click)="goNext()"  color="primary" mat-raised-button>NEXT</button>
 </div> -->
 
-<div class="work" fxLayout="row"  fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center">
-  <mat-card class="card-picture card" fxFlex="20%" *ngFor="let film of films" >
+<div class="work" fxLayout="row" fxFlex.xs="100%" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center">
+  <mat-card class="card-picture card" fxFlex.lg="20%" *ngFor="let film of films" >
      <mat-card-title (click)="getFilmDetails(film['url'])">{{film.title}}</mat-card-title>
     <mat-card-subtitle>Film</mat-card-subtitle>
 
