fixed mobile and tablet in film
Signed-off-by: han <myinttun.han@isobar.com>

--- a/src/app/film-details/film-details.component.html
+++ b/src/app/film-details/film-details.component.html
@@ -1,7 +1,7 @@
 
 <div class="container sec-info">
     <section fxLayout="row wrap" fxLayoutAlign="center center" *ngIf="film">
-        <mat-card fxFlex="1200px" fxFlex.xs="100%">
+        <mat-card fxFlex="1200px" fxFlex.sm="100%" fxFlex.xs="100%">
             <mat-card-title>Episode {{film.episode_id}}: {{ film.title }}</mat-card-title>
             <mat-card-content>
               <div fxLayout="column wrap" fxLayoutGap="40px">
