--- a/src/app/films/films.component.html
+++ b/src/app/films/films.component.html
@@ -14,7 +14,7 @@
 </div> -->
 
 <div class="work" fxLayout="row" fxFlex.xs="100%" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center">
-  <mat-card class="card-picture card" fxFlex.lg="20%" *ngFor="let film of films" >
+  <mat-card class="card-picture card" fxFlex.xs="100%" fxFlex.sm="30%" fxFlex.lg="20%" *ngFor="let film of films" >
      <mat-card-title (click)="getFilmDetails(film['url'])">{{film.title}}</mat-card-title>
     <mat-card-subtitle>Film</mat-card-subtitle>
 
